# bibi_work

./: .gitignore  AGENTS.md  LICENSE  services.sh
bibi_work_agent/: __init__.py  main.py  pyproject.toml  settings.py  telemetry.py
bibi_work_agent/api/: __init__.py  app.py  internal_routes.py  schemas.py
bibi_work_agent/backends/: __init__.py  platform_composite_backend.py
bibi_work_agent/clients/: __init__.py  rust_client.py
bibi_work_agent/runtime/: __init__.py  agent_factory.py  cancellation.py  checkpointer.py  error_reporting.py  event_emitter.py  event_normalizer.py  llm_retry.py  memory_candidates.py  memory_retrieval.py  resume_executor.py  resume_idempotency.py  run_executor.py  snapshot_contract.py  tool_context.py
bibi_work_agent/tests/: conftest.py  test_agent_factory.py  test_artifact_draft_stream.py  test_cancellation.py  test_celery_app.py  test_checkpointer.py  test_deepagents_hitl.py  test_event_normalizer_reasoning.py  test_event_normalizer_tool_delta.py  test_internal_routes.py  test_io_policy.py  test_llm_retry.py  test_memory_candidates.py  test_memory_retrieval.py  test_platform_backend.py  test_result_presenter.py  test_resume_executor.py  test_runtime_cancellation_registry.py  test_runtime_dag_e2e.py  test_rust_client.py  test_snapshot_contract.py  test_telemetry.py  test_tool_wrapper.py  test_worker_metrics.py
bibi_work_agent/tools/: __init__.py  io_policy.py  platform_adapters.py  result_presenter.py  risk.py  wrapper.py
bibi_work_agent/workers/: __init__.py  celery_app.py  metrics.py  tasks.py
bibi_work_backend/: .env  .gitignore  Cargo.toml
bibi_work_backend/configuration/: base.yaml  local.yaml  production.yaml
bibi_work_backend/migrations/: 20260615000000_agent_platform_control_plane.sql  20260619000001_workflow_reliability.sql  20260620000001_memory_vector_ingestion.sql  20260621000001_tool_call_error_summary.sql  20260621000002_audit_hash_chain.sql  20260621000003_audit_hash_chain_segments.sql  20260621000004_file_lock_binary_audit.sql  20260621000005_approval_evidence_audit_bucket.sql  20260621000006_tool_call_evidence_audit_bucket.sql  20260621000007_tool_execution_file_index.sql  20260625000001_workspace_mount_scope.sql  20260626000001_tool_result_artifacts.sql  20260713000000_initial_schema.sql  20260714000000_agent_mcp_capability_governance.sql  20260721000000_desktop_session_idle_timeout.sql  20260722000000_llm_model_profile_display_name.sql  20260722010000_llm_local_secret_storage.sql  20260723000000_split_agent_runtimes_and_assistants.sql
bibi_work_backend/scripts/: bootstrap_ferriskey.py  init_db.sh
bibi_work_backend/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
bibi_work_frontend/: .gitignore  (+8 more)
(+529 files in other folders)
