[project]
name = "bibi-work-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "deepagents>=0.6.10",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.2",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.13.4",
    "pytest>=9.0.2",
    "redis>=8.0.0",
    "socksio>=1.0.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
bibi-work-agent = "bibi_work_agent.main:run"
