[package]
name = "bibi_work_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.5"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "json",
    "time",
    "migrate",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.7.0"
config = { version = "0.15.23", default-features = false, features = ["yaml"] }
axum = { version = "0.8.9", features = ["macros", "ws"] }
anyhow = "1.0.102"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
time = { version = "0.3.49", features = ["serde", "serde-well-known"] }
thiserror = "2.0.18"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
redis = { version = "1.2.3", features = ["tokio-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tower-http = { version = "0.7.0", features = ["cors"] }
serde_json = "1.0.150"
async-stream = "0.3.6"
futures-util = "0.3.32"
hex = "0.4.3"
sha2 = "0.11.0"
constant_time_eq = "0.5.0"
bytes = "1.11.0"
base64 = "0.22.1"
object_store = { version = "0.12.4", features = ["aws"] }
