[package]
name = "bibi-work-frontend"
version = "0.1.0"
description = "Bibi Work desktop shell"
authors = ["Bibi Work"]
edition = "2021"

[lib]
name = "bibi_work_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = "3"
open = "5"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
thiserror = "2"
url = "2"
whoami = "1"
